@@ -1,6 +1,6 @@
 {
   "name": "simp-xinetd",
-  "version": "4.5.0",
+  "version": "4.6.0",
   "author": "SIMP Team",
   "summary": "Manages xinetd",
   "license": "Apache-2.0",
@@ -14,22 +14,22 @@
   "dependencies": [
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 8.0.0 < 9.0.0"
+      "version_requirement": ">= 8.0.0 < 10.0.0"
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.7.0 < 5.0.0"
+      "version_requirement": ">= 4.9.0 < 5.0.0"
     }
   ],
   "simp": {
     "optional_dependencies": [
       {
         "name": "simp/iptables",
-        "version_requirement": ">= 6.0.0 < 7.0.0"
+        "version_requirement": ">= 6.5.3 < 7.0.0"
       },
       {
         "name": "simp/tcpwrappers",
-        "version_requirement": ">= 6.0.0 < 7.0.0"
+        "version_requirement": ">= 6.2.0 < 7.0.0"
       }
     ]
   },
@@ -71,7 +71,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 6.22.1 < 9.0.0"
+      "version_requirement": ">= 7.0.0 < 9.0.0"
     }
   ]
 }
